--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,17 @@
     transform: rotate(360deg);
   }
 }
+
+
+/************* Main App Component **************/
+
+.component-app{
+  margin: auto;
+  max-width: 300px;
+  background-color: lightgrey;
+  border-radius: 15px;
+  height: 425px;
+  border: solid 2px dimgray;
+  box-shadow: 4px -1px slategray, 7px -2px slategray, 10px -3px black ;
+  margin-top: 50px;
+}
